Refactor: replace internal differ with object-graph-delta
Remove the in-repo `differ/` folder and rely on the published `object-graph-delta` package for graph delta calculation.

Since `diff` now defaults to `"diff"` mode, explicitly pass:
const difference = diff(extractedProps, diffTarget, {
  arrayPolicy: 'atomic',
  arrayEquality: 'reference'
});
to preserve the intended array comparison behavior.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "@standard-schema/spec": "^1.1.0",
     "estree-toolkit": "^1.7.13",
-    "estree-util-value-to-estree": "^3.5.0"
+    "estree-util-value-to-estree": "^3.5.0",
+    "object-graph-delta": "^1.0.0"
   },
   "peerDependencies": {
     "unified": "^11.0.0"
