Add package keywords
Add an initial curated keyword set to package.json for npm discoverability, covering MDX/Recma, static data extraction, build-time validation, Standard Schema ecosystem (Zod/Valibot/ArkType), prop derivation, and zero-runtime behavior.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,20 @@
   "files": [
     "dist"
   ],
+  "keywords": [
+    "mdx",
+    "mdx-plugin",
+    "recma",
+    "meta-props",
+    "static-data-extraction",
+    "build-time-validation",
+    "standard-schema",
+    "zod",
+    "valibot",
+    "arktype",
+    "prop-derivation",
+    "zero-runtime"
+  ],
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
